[project]
name = "nnw-mcp"
version = "0.1.0"
description = "MCP server for NetNewsWire – read-only access to your RSS feeds"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
nnw-mcp = "server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
